Fixed reels layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -987,7 +987,7 @@ button {
 
 /* GALLERY */
 
-#instafeed {
+#instafeed, .reels-feed {
     width: 100%;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
